<resources>
    <string name="app_name">YaTranslateTest2017</string>

    <string name="input_text">Введите текст для перевода</string>
    <string name="translate_button">Перевести</string>
    <string name="incomming_translate">Здесь будет перевод</string>
    <string name="copyright_comment">Переведено сервисом «Яндекс.Переводчик»</string>
    <string name="copyright_comment2">http://translate.yandex.ru/</string>
    <string name="delete_buton">Очистить поле ввода</string>
    <string name="connection">Подключение</string>
    <string name="choose_language">Выберите языки</string>
    <string name="change_language_button"><![CDATA[<—>]]></string>

    <string name="empty_history_text">Нет записей в истории</string>
    <string name="empty_history_start">Переведите несколько слов</string>
    <string name="empty_favourites_text">Нет записей в избранном</string>
    <string name="empty_favourite_start">Добавьте несколько слов</string>

    <string name="translate_fragment_head">Перевод</string>
    <string name="history_fragment_head">История</string>
    <string name="info_fragment_head">Инфо</string>
    <string name="favourites_fragment_head">Избранное</string>

    <string name="delete_history_text">Удалить историю</string>
    <string name="delete_dialog_msg">Удалить всю историю переводов?</string>
    <string name="delete_dialog_msg2">Удалить выбранный перевод?</string>
    <string name="delete_history_yes">Да</string>
    <string name="delete_history_no">Отмена</string>

    <string name="search_history">Введите слово для поиска в истории</string>

    <string name="bookmark">Добавить в избранное</string>
    <string name="bookmark_description">Метка избранного</string>

    <string name="code_401">Неправильный API-ключ.</string>
    <string name="code_402">API-ключ заблокирован.</string>
    <string name="code_404">Превышено суточное ограничение на объем переведенного текста.</string>
    <string name="code_413">Превышен максимально допустимый размер текста.</string>
    <string name="code_422">Текст не может быть переведен.</string>
    <string name="code_501">Заданное направление перевода не поддерживается.</string>
    <string name="code_something_wrong">Ошибка подключения. Повторите попытку. </string>

    <string name="small_instruction">Информация о приложении:
        \n\nЧто умеет делать: умеет переводить слова и целые предложения на выбранный язык. Кроме этого, переведенный текст можно добавить в избранное. Все переводы хранятся в базе данных.
        \n\nДобавление в избранное: чтобы добавить новый перевод в избранное нужно отметить чекбокс Добавить в избранное, либо во вкладке История нажать на нужный перевод. Зеленая метка означает, что текст в избранном.
        \n\nУдаление переводов: удалить все переводы можно нажав на иконку ведра в меню во вкладке с историей. Чтобы удалить отдельную запись, нужно удерживать долгое нажатие на выбранном переводе во вкладке История.
        \n\nАвтор: Веренцов Денис, decsent@yandex.ru
    \n\n</string>

</resources>
