<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:layout_margin="6sp">

    <LinearLayout
        style="@style/Translate_Elements_Style"
        android:background="@drawable/view_text_style"
        android:orientation="vertical"
        android:layout_margin="6sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3sp"
            android:text="@string/small_instruction"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="3sp"
            android:text="@string/copyright_comment"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3sp"
            android:gravity="center"
            android:autoLink="web"
            android:text="@string/copyright_comment2"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>